Added Artist & country name and contest year to the the search result. Also added querying on those fields

--- a/src/test/Refrain.Portal.Module.Test/View/AudioMusicTrack_bb8dd249c192405b8a86b3fb5ca49819_Amours_mortes_(tant_de_peine).xml
+++ b/src/test/Refrain.Portal.Module.Test/View/AudioMusicTrack_bb8dd249c192405b8a86b3fb5ca49819_Amours_mortes_(tant_de_peine).xml
@@ -114,7 +114,7 @@
     <Context>
       <Titles>
         <Main>
-          <Title>TODO</Title>
+          <Title>EuroVision Song Contest 1957</Title>
         </Main>
       </Titles>
       <HardCodedObjectReference>
