--- a/src/test/Refrain.Portal.Module.Test/View/ActorContent_74934fa247f144aa8e6bc96e9bc594f4.xml
+++ b/src/test/Refrain.Portal.Module.Test/View/ActorContent_74934fa247f144aa8e6bc96e9bc594f4.xml
@@ -1,7 +1,7 @@
 ﻿<CoSound.Object.ActorContentStateMood.R001a xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="CoSound_Object_ActorContent_StateMood_R001a.xsd">
   <Basics>
     <Description />
-    <CreatedDateTime>2014-05-06T15-12-09</CreatedDateTime>
+    <CreatedDateTime>2014-05-06T15-12-09Z</CreatedDateTime>
     <Category>Mood:Twitter</Category>
   </Basics>
   <Actor>
@@ -31,8 +31,8 @@
       <Type>Interval</Type>
       <Domain>Countinious</Domain>
       <Reference>Absolute</Reference>
-      <StartAtDateTime>2014-05-04T13:09:28</StartAtDateTime>
-      <EndAtDateTime>2014-05-04T14:45:12</EndAtDateTime>
+      <StartAtDateTime>2014-05-04T13:09:28Z</StartAtDateTime>
+      <EndAtDateTime>2014-05-04T14:45:12Z</EndAtDateTime>
     </Timeline>
     <ResultSummary>
       <Results>
@@ -47,7 +47,7 @@
       <Data>
         <DataPoint>
           <Series>
-            <Id>1</Id>
+            <Identity>1</Identity>
             <SerialNumber>1</SerialNumber>
           </Series>
           <Results>
@@ -60,7 +60,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Tweet</Type>
               <URI />
-              <Id>462942083267850242</Id>
+              <Identity>462942083267850242</Identity>
               <Text>Eurovision 2014 preview: Will Switzerland entry Hunter of Stars see Sebalter join song contest winners? http://t.co/F1Pvv8AsX5</Text>
               <LanguageCode />
               <EmbeddingCode>%3Cobjects+provider_url%3D%22https%3A%2F%2Ftwitter.com%22+version%3D%221.0%22+url%3D%22https%3A%2F%2Ftwitter.com%2FEnochJeremiah7%2Fstatuses%2F462942083267850242%22+author_name%3D%22Enoch+Jeremiah%22+height%3D%22None%22+width%3D%22550%22+html%3D%22%3Cblockquote+class%3D%22twitter-tweet%22%3E%3Cp%3EEurovision+2014+preview%3A+Will+Switzerland+entry+Hunter+of+Stars+see+Sebalter+join+song+contest+winners%3F+%3Ca+href%3D%22http%3A%2F%2Ft.co%2FF1Pvv8AsX5%22%3Ehttp%3A%2F%2Ft.co%2FF1Pvv8AsX5%3C%2Fa%3E%3C%2Fp%3E%26mdash%3B+Enoch+Jeremiah+%28%40EnochJeremiah7%29+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2FEnochJeremiah7%2Fstatuses%2F462942083267850242%22%3EMay+4%2C+2014%3C%2Fa%3E%3C%2Fblockquote%3E%0A%3Cscript+async+src%3D%22%2F%2Fplatform.twitter.com%2Fwidgets.js%22+charset%3D%22utf-8%22%3E%3C%2Fscript%3E%22+author_url%3D%22https%3A%2F%2Ftwitter.com%2FEnochJeremiah7%22+provider_name%3D%22Twitter%22+cache_age%3D%223153600000%22+type%3D%22rich%22%2F%3E</EmbeddingCode>
@@ -68,7 +68,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Author</Type>
               <URI />
-              <Id>453176496</Id>
+              <Identity>453176496</Identity>
               <Text>EnochJeremiah7</Text>
               <Text />
               <EmbeddingCode />
@@ -78,7 +78,7 @@
         </DataPoint>
         <DataPoint>
           <Series>
-            <Id>1</Id>
+            <Identity>1</Identity>
             <SerialNumber>2</SerialNumber>
           </Series>
           <Results>
@@ -91,7 +91,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Tweet</Type>
               <URI />
-              <Id>462942128696348672</Id>
+              <Identity>462942128696348672</Identity>
               <Text>Eurovision 2014 preview: Will Switzerland entry Hunter of Stars see Sebalter join song contest winners? http://t.co/aaj7NOuBWm</Text>
               <LanguageCode />
               <EmbeddingCode />
@@ -122,7 +122,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Tweet</Type>
               <URI />
-              <Id>462944213118640128</Id>
+              <Identity>462944213118640128</Identity>
               <Text>Eurovision 2014 preview: Will Switzerland entry Hunter of Stars see Sebalter .... http://t.co/HbGlr0Mwrs</Text>
               <LanguageCode />
               <EmbeddingCode>%3Cobjects+provider_url%3D%22https%3A%2F%2Ftwitter.com%22+version%3D%221.0%22+url%3D%22https%3A%2F%2Ftwitter.com%2FSwitzerland%2Fstatuses%2F462944213118640128%22+author_name%3D%22Switzerland+News%22+height%3D%22None%22+width%3D%22550%22+html%3D%22%3Cblockquote+class%3D%22twitter-tweet%22%3E%3Cp%3EEurovision+2014+preview%3A+Will+Switzerland+entry+Hunter+of+Stars+see+Sebalter+....+%3Ca+href%3D%22http%3A%2F%2Ft.co%2FHbGlr0Mwrs%22%3Ehttp%3A%2F%2Ft.co%2FHbGlr0Mwrs%3C%2Fa%3E%3C%2Fp%3E%26mdash%3B+Switzerland+News+%28%40Switzerland%29+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2FSwitzerland%2Fstatuses%2F462944213118640128%22%3EMay+4%2C+2014%3C%2Fa%3E%3C%2Fblockquote%3E%0A%3Cscript+async+src%3D%22%2F%2Fplatform.twitter.com%2Fwidgets.js%22+charset%3D%22utf-8%22%3E%3C%2Fscript%3E%22+author_url%3D%22https%3A%2F%2Ftwitter.com%2FSwitzerland%22+provider_name%3D%22Twitter%22+cache_age%3D%223153600000%22+type%3D%22rich%22%2F%3E</EmbeddingCode>
@@ -130,7 +130,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Author</Type>
               <URI />
-              <Id>260034259</Id>
+              <Identity>260034259</Identity>
               <Text>Switzerland</Text>
               <Text />
               <EmbeddingCode />
@@ -140,7 +140,7 @@
         </DataPoint>
         <DataPoint>
           <Series>
-            <Id>1</Id>
+            <Identity>1</Identity>
             <SerialNumber>4</SerialNumber>
           </Series>
           <Results>
@@ -153,7 +153,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Tweet</Type>
               <URI />
-              <Id>462966174888648704</Id>
+              <Identity>462966174888648704</Identity>
               <Text>#CelineDion Eurovision 2014 preview: Will Switzerland entry Hunter of Stars see Sebalter join song contest ...... http://t.co/O9o8gORJnq</Text>
               <LanguageCode />
               <EmbeddingCode>%3Cobjects+provider_url%3D%22https%3A%2F%2Ftwitter.com%22+version%3D%221.0%22+url%3D%22https%3A%2F%2Ftwitter.com%2FJimHarrison01%2Fstatuses%2F462966174888648704%22+author_name%3D%22Jim+Harrison%22+height%3D%22None%22+width%3D%22550%22+html%3D%22%3Cblockquote+class%3D%22twitter-tweet%22%3E%3Cp%3E%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2Fsearch%3Fq%3D%2523CelineDion%26amp%3Bsrc%3Dhash%22%3E%23CelineDion%3C%2Fa%3E+Eurovision+2014+preview%3A+Will+Switzerland+entry+Hunter+of+Stars+see+Sebalter+join+song+contest+......+%3Ca+href%3D%22http%3A%2F%2Ft.co%2FO9o8gORJnq%22%3Ehttp%3A%2F%2Ft.co%2FO9o8gORJnq%3C%2Fa%3E%3C%2Fp%3E%26mdash%3B+Jim+Harrison+%28%40JimHarrison01%29+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2FJimHarrison01%2Fstatuses%2F462966174888648704%22%3EMay+4%2C+2014%3C%2Fa%3E%3C%2Fblockquote%3E%0A%3Cscript+async+src%3D%22%2F%2Fplatform.twitter.com%2Fwidgets.js%22+charset%3D%22utf-8%22%3E%3C%2Fscript%3E%22+author_url%3D%22https%3A%2F%2Ftwitter.com%2FJimHarrison01%22+provider_name%3D%22Twitter%22+cache_age%3D%223153600000%22+type%3D%22rich%22%2F%3E</EmbeddingCode>
@@ -161,7 +161,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Author</Type>
               <URI />
-              <Id>2465388774</Id>
+              <Identity>2465388774</Identity>
               <Text>JimHarrison01</Text>
               <Text />
               <EmbeddingCode />
@@ -171,7 +171,7 @@
         </DataPoint>
         <DataPoint>
           <Series>
-            <Id>1</Id>
+            <Identity>1</Identity>
             <SerialNumber>5</SerialNumber>
           </Series>
           <Results>
@@ -184,7 +184,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Tweet</Type>
               <URI />
-              <Id>462950603262803968</Id>
+              <Identity>462950603262803968</Identity>
               <Text>#Finnland, #Spanien und die #Schweiz sind gar nicht mal so schlecht :D #JoinUs #ESC2014 #Eurovision</Text>
               <LanguageCode />
               <EmbeddingCode>%3Cobjects+provider_url%3D%22https%3A%2F%2Ftwitter.com%22+version%3D%221.0%22+url%3D%22https%3A%2F%2Ftwitter.com%2FQuarteragent%2Fstatuses%2F462950603262803968%22+author_name%3D%22Steve%22+height%3D%22None%22+width%3D%22550%22+html%3D%22%3Cblockquote+class%3D%22twitter-tweet%22%3E%3Cp%3E%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2Fsearch%3Fq%3D%2523Finnland%26amp%3Bsrc%3Dhash%22%3E%23Finnland%3C%2Fa%3E%2C+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2Fsearch%3Fq%3D%2523Spanien%26amp%3Bsrc%3Dhash%22%3E%23Spanien%3C%2Fa%3E+und+die+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2Fsearch%3Fq%3D%2523Schweiz%26amp%3Bsrc%3Dhash%22%3E%23Schweiz%3C%2Fa%3E+sind+gar+nicht+mal+so+schlecht+%3AD+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2Fsearch%3Fq%3D%2523JoinUs%26amp%3Bsrc%3Dhash%22%3E%23JoinUs%3C%2Fa%3E+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2Fsearch%3Fq%3D%2523ESC2014%26amp%3Bsrc%3Dhash%22%3E%23ESC2014%3C%2Fa%3E+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2Fsearch%3Fq%3D%2523Eurovision%26amp%3Bsrc%3Dhash%22%3E%23Eurovision%3C%2Fa%3E%3C%2Fp%3E%26mdash%3B+Steve+%28%40Quarteragent%29+%3Ca+href%3D%22https%3A%2F%2Ftwitter.com%2FQuarteragent%2Fstatuses%2F462950603262803968%22%3EMay+4%2C+2014%3C%2Fa%3E%3C%2Fblockquote%3E%0A%3Cscript+async+src%3D%22%2F%2Fplatform.twitter.com%2Fwidgets.js%22+charset%3D%22utf-8%22%3E%3C%2Fscript%3E%22+author_url%3D%22https%3A%2F%2Ftwitter.com%2FQuarteragent%22+provider_name%3D%22Twitter%22+cache_age%3D%223153600000%22+type%3D%22rich%22%2F%3E</EmbeddingCode>
@@ -192,7 +192,7 @@
             <ForeignReference>
               <Type>Data:Twitter:Author</Type>
               <URI />
-              <Id>750002220</Id>
+              <Identity>750002220</Identity>
               <Text>Quarteragent</Text>
               <Text />
               <EmbeddingCode />
